# open-journalism

./: .gitignore  .pre-commit-config.yaml  Makefile  Pipfile  README.md  TODO.md  analyze.py  download.py  fetch-newspack-repos.py  head-and-tools.md  new-repos-by-month.csv  org-report.csv  orgs.csv  pyproject.toml  repos.csv
.github/workflows/: download.yaml  update.yaml
data/extracted/: abcnews.json  alephdata.json  ancir.json  apm-research-lab.json  apmg.json  arizonadailystar.json  associatedpress.json  axioscode.json  badideafactory.json  bangordailynews.json  baycitizen.json  bbc-data-unit.json  bettergov.json  biglocalnews.json  bloomberggraphics.json  businessinsider.json  california-civic-data-coalition.json  calmatters.json  canalplus.json  cbcnews.json  cbcrc.json  cbs-news-data.json  censusreporter.json  chalkbeat.json  cirlabs.json  city-bureau.json  civica-digital.json  civilbeat.json  condenast.json  cornelldatajournal.json  cunyjschool.json  datadesk.json  datahub.json  datamade.json  datanews.json  delawaredata.json  democracynow.json  derspiegel.json  documentcloud.json  dowjones.json  (+126 more)
data/extracted/org-members/: abcnews.json  aftenposten.json  aljazeeraplus.json  (+157 more)
data/transformed/: new-repos-by-month.csv  org-members.csv  org-repo-contributors.csv  org-report.csv
notebooks/: most-members.ipynb  new-repos.ipynb  top-orgs.ipynb  top-repos.ipynb
src/: __main__.py  analyze.py  cli.py  download.py  settings.py
src/analyze/: cli.py  new_repos_by_month.py  orgs.py
src/download/: cli.py  org_members.py  org_repo_contributors.py  org_repos.py
(+12960 files in other folders)
